2011-02-07  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed.

        [Qt] Fix crashes in QMetaObject::metacall
        https://bugs.webkit.org/show_bug.cgi?id=53912

        * platform/qt/Skipped: http/tests/websocket/tests/websocket-protocol-ignored.html added until fix.

2011-02-07  Kenji Imasaki  <imasaki@chromium.org>

        Reviewed by David Levin.

        [Chromium] Remove non-Flaky media layout tests and update bugs that
        are associated with media layout tests
        https://bugs.webkit.org/show_bug.cgi?id=53948

        * platform/chromium/test_expectations.txt:

2011-02-07  Kenichi Ishibashi  <bashi@google.com>

        Reviewed by Andreas Kling.

        HTMLOutputElement::childrenChanged() should call its base class childrenChanged()
        https://bugs.webkit.org/show_bug.cgi?id=53791

        Test that a live list is updated after the child of an HTMLOutputElement was removed.

        * fast/dom/HTMLOutputElement/htmloutputelement-children-removed-expected.txt: Added.
        * fast/dom/HTMLOutputElement/htmloutputelement-children-removed.html: Added.

2011-02-07  Ami Fischman  <fischman@google.com>

        Reviewed by Eric Seidel.

        Re-baseline media/video-zoom.html for http://crbug.com/70252 aka
        https://bugs.webkit.org/show_bug.cgi?id=53737 to account for (very)
        slightly different scrollbar shading.
        This test isn't flaky on LINUX or MAC according to
        http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&showAllRuns=true&master=ChromiumWebkit&tests=media%2Fvideo-zoom.html
        so take it out of test_expectations.txt; it passes 100% on LINUX and
        fails 100% on MAC, and should pass 100% on MAC with this new
        baseline.

        * platform/chromium-mac/media/video-zoom-expected.checksum:
        * platform/chromium-mac/media/video-zoom-expected.png:
        * platform/chromium/test_expectations.txt:
