@@ -1,3 +1,15 @@
+2011-02-07  Cris Neckar  <cdn@chromium.org>
+
+        Reviewed by Jian Li.
+
+        Fix null deref in DOMURL
+        https://bugs.webkit.org/show_bug.cgi?id=53811
+
+        Test: fast/files/domurl-script-execution-context-crash.html
+
+        * html/DOMURL.cpp:
+        (WebCore::DOMURL::DOMURL):
+
 2011-02-07  Mark Rowe  <mrowe@apple.com>
 
         Fix the 32-bit build.
